test/files/neg/escapes.check
escapes.scala:2 error: type t escapes its defining scope as part of type t
  def f(x: Any) = x match { case y: Cell[t] => y.elem }
                                                ^
subst type t to T
one error found
